src/test/deca/context/invalid/undeclared-var.des
The variable  x  is not declarated yet